--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -26,6 +26,9 @@ jobs:
           pip install --upgrade pip
           pip install -r requirements.txt
 
+      - name: Run Linter
+        run: flake8 src/
+
       - name: Run Unit Tests
         run: pytest src/tests/test_unit.py
 
@@ -44,12 +47,14 @@ jobs:
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Build Docker Image
         run: |
-          docker build -t mydockerhubusername/myapp:latest .
+          docker build -t ${{ secrets.DOCKER_USERNAME }}/myapp:latest .
+          docker tag ${{ secrets.DOCKER_USERNAME }}/myapp:latest ${{ secrets.DOCKER_USERNAME }}/myapp:${{ github.sha }}
 
       - name: Push Docker Image to Docker Hub
         run: |
-          docker push mydockerhubusername/myapp:latest
+          docker push ${{ secrets.DOCKER_USERNAME }}/myapp:latest
+          docker push ${{ secrets.DOCKER_USERNAME }}/myapp:${{ github.sha }}
