--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -51,10 +51,10 @@ jobs:
 
       - name: Build Docker Image
         run: |
-          docker build -t ${{ secrets.DOCKER_USERNAME }}/myapp:latest .
-          docker tag ${{ secrets.DOCKER_USERNAME }}/myapp:latest ${{ secrets.DOCKER_USERNAME }}/myapp:${{ github.sha }}
+          docker build -t ${{ secrets.DOCKER_USERNAME }}/cicd-pipeline-guidelines:latest .
+          docker tag ${{ secrets.DOCKER_USERNAME }}/cicd-pipeline-guidelines:latest ${{ secrets.DOCKER_USERNAME }}/cicd-pipeline-guidelines:${{ github.sha }}
 
       - name: Push Docker Image to Docker Hub
         run: |
-          docker push ${{ secrets.DOCKER_USERNAME }}/myapp:latest
-          docker push ${{ secrets.DOCKER_USERNAME }}/myapp:${{ github.sha }}
+          docker push ${{ secrets.DOCKER_USERNAME }}/cicd-pipeline-guidelines:latest
+          docker push ${{ secrets.DOCKER_USERNAME }}/cicd-pipeline-guidelines:${{ github.sha }}
