--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -10,7 +10,7 @@ on:
 
 jobs:
   test:
-    name: Run Unit and Integration Tests
+    name: Unit and Integration Tests
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Code
@@ -26,7 +26,7 @@ jobs:
           pip install --upgrade pip
           pip install -r requirements.txt
 
-      - name: Run Linter
+      - name: Run Linter (Code Quality Check)
         run: flake8 src/
 
       - name: Run Unit Tests
@@ -36,7 +36,7 @@ jobs:
         run: pytest src/tests/test_integration.py
 
   build-and-push:
-    name: Build and Push Docker Image
+    name: Build and Push Docker Image to DockerHub
     runs-on: ubuntu-latest
     needs: test
     steps:
